# stacky

./: .gitignore  README.md
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: main.rs
ui/: index.html  package-lock.json  package.json
ui/src/: main.ts  styles.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
