[package]
name = "stacky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }

serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.7.0", features = ["serde"] }
